--- a/index.html
+++ b/index.html
@@ -122,11 +122,17 @@
                     <main>
                         <h1 id="项目说明"><a class="header" href="#项目说明">项目说明</a></h1>
 <ul>
+<li><a href="#%E5%9C%A8%E7%BA%BF%E6%B5%8F%E8%A7%88">在线浏览</a></li>
 <li><a href="#%E6%89%80%E6%9C%89%E6%9D%83%E8%AF%B4%E6%98%8E">所有权说明</a></li>
 <li><a href="#%E5%BB%BA%E5%BA%93%E6%9C%AC%E6%84%8F">建库本意</a></li>
 <li><a href="#%E7%94%9F%E6%88%90-htmlepubpdf">生成 html,epub,pdf</a></li>
 <li><a href="#%E6%96%87%E4%BB%B6%E5%A4%84%E7%90%86%E6%B5%81%E7%A8%8B">文件处理流程</a></li>
 </ul>
+<h2 id="在线浏览"><a class="header" href="#在线浏览">在线浏览</a></h2>
+<p><a href="https://whatot.github.io/leeao/index.html">https://whatot.github.io/leeao/index.html</a></p>
+<blockquote>
+<p>由 github action 驱动自动构建部署 master 最新版到 github page 中</p>
+</blockquote>
 <h2 id="所有权说明"><a class="header" href="#所有权说明">所有权说明</a></h2>
 <p><strong>这个 github 帐号 whatot 并非原著者，whatot 只是将 wjm_tcy 编著的大李敖全集进行格式化，没有其它额外加工。
 所有权利由 leeao 与 wjm_tcy 保持，此处仅为传播与留存。</strong>
